prevent wrapping of heading on mobile

--- a/css/firstrunwizard.css
+++ b/css/firstrunwizard.css
@@ -5,6 +5,7 @@
 
 #firstrunwizard h1 {
 	font-size: 40px;
+	line-height: 130%;
 	margin: 50px 0 20px;
 }
 
